--- a/cell02/ex02/parallax.html
+++ b/cell02/ex02/parallax.html
@@ -5,13 +5,17 @@
   </head>
   <body>
     <div class="parallax_top">
-      <div class="center-text">
+      <div class="top-text">
         Hello_World_Parallax
       </div>
     </div>
     <div class="content">
       <h2>Boo</h2>
     </div>
-    <div class="parallax_buttom"></div>
+    <div class="parallax_buttom">
+      <div class="buttom-text">
+        <h2>Just kidding</h2>
+      </div>
+    </div>
   </body>
 </html>
