--- a/cell03/ex00/backgroound.html
+++ b/cell03/ex00/backgroound.html
@@ -9,7 +9,7 @@
       var button = document.getElementById('color-button');
 
       // Generate a random hex color like #12AB4F
-      function getRandomColor() {
+      function RandomC() {
         var letters = '0123456789ABCDEF';
         var color = '#';
         for (var i = 0; i < 6; i += 1) {
@@ -20,7 +20,7 @@
 
       // Update the page background each time the button is clicked
       button.onclick = function () {
-        document.body.style.backgroundColor = getRandomColor();
+        document.body.style.backgroundColor = RandomC();
       };
     </script>
   </body>
