--- a/rush/landing-page.html
+++ b/rush/landing-page.html
@@ -27,7 +27,7 @@
 
     <div class="w-full space-y-5">
       <!-- TE card -->
-      <a href="Te.html" class="group block w-full rounded-[50px] bg-white/10 backdrop-blur-xl ring-1 ring-white/20 shadow-xl px-6 py-5 sm:py-7 transition hover:bg-white/15 focus:outline-none focus:ring-2 focus:ring-sky-400/60">
+      <a href="Te.html" class="group block w-full rounded-[50px] bg-white/10 backdrop-blur-xl ring-1 ring-white/20 shadow-xl px-6 py-5 sm:py-7 transition hover:bg-white/15 hover:scale-105 hover:shadow-2xl focus:outline-none focus:ring-2 focus:ring-sky-400/60">
         <div class="flex items-center gap-4">
           <div class="shrink-0 h-12 w-12 rounded-full grid place-items-center bg-white/15 ring-1 ring-white/10 text-2xl">👨‍💻</div>
           <div class="flex-1">
@@ -39,7 +39,7 @@
       </a>
 
       <!-- FIN card -->
-      <a href="Fin.html" class="group block w-full rounded-[50px] bg-white/10 backdrop-blur-xl ring-1 ring-white/20 shadow-xl px-6 py-5 sm:py-7 transition hover:bg-white/15 focus:outline-none focus:ring-2 focus:ring-indigo-400/60">
+      <a href="Fin.html" class="group block w-full rounded-[50px] bg-white/10 backdrop-blur-xl ring-1 ring-white/20 shadow-xl px-6 py-5 sm:py-7 transition hover:bg-white/15 hover:scale-105 hover:shadow-2xl focus:outline-none focus:ring-2 focus:ring-indigo-400/60">
         <div class="flex items-center gap-4">
           <div class="shrink-0 h-12 w-12 rounded-full grid place-items-center bg-white/15 ring-1 ring-white/10 text-2xl">🎨</div>
           <div class="flex-1">
@@ -50,7 +50,6 @@
         </div>
       </a>
     </div>
-
     <footer class="mt-8 text-center text-xs text-white/60">
       Click to get into Portfolio
     </footer>
