--- a/rush/landing-page.html
+++ b/rush/landing-page.html
@@ -44,7 +44,7 @@
           <div class="shrink-0 h-12 w-12 rounded-full grid place-items-center bg-white/15 ring-1 ring-white/10 text-2xl">🎨</div>
           <div class="flex-1">
             <h2 class="text-lg sm:text-xl font-semibold">Fin</h2>
-            <p class="text-sm text-white/70">Network & Cloud • IoT • Linux • Monitoring (placeholder)</p>
+            <p class="text-sm text-white/70">(placeholder)</p>
           </div>
           <div class="opacity-70 group-hover:opacity-100 transition text-2xl">›</div>
         </div>
