--- a/rush/landing-page.html
+++ b/rush/landing-page.html
@@ -39,12 +39,12 @@
       </a>
 
       <!-- FIN card -->
-      <a href="Fin.html" class="group block w-full rounded-[50px] bg-white/10 backdrop-blur-xl ring-1 ring-white/20 shadow-xl px-6 py-5 sm:py-7 transition hover:bg-white/15 hover:scale-105 hover:shadow-2xl focus:outline-none focus:ring-2 focus:ring-indigo-400/60">
+      <a href="Finn.html" class="group block w-full rounded-[50px] bg-white/10 backdrop-blur-xl ring-1 ring-white/20 shadow-xl px-6 py-5 sm:py-7 transition hover:bg-white/15 hover:scale-105 hover:shadow-2xl focus:outline-none focus:ring-2 focus:ring-indigo-400/60">
         <div class="flex items-center gap-4">
-          <div class="shrink-0 h-12 w-12 rounded-full grid place-items-center bg-white/15 ring-1 ring-white/10 text-2xl">🎨</div>
+          <div class="shrink-0 h-12 w-12 rounded-full grid place-items-center bg-white/15 ring-1 ring-white/10 text-2xl">📸</div>
           <div class="flex-1">
-            <h2 class="text-lg sm:text-xl font-semibold">Fin</h2>
-            <p class="text-sm text-white/70">(placeholder)</p>
+            <h2 class="text-lg sm:text-xl font-semibold">Finn</h2>
+            <p class="text-sm text-white/70">Studying Programming • Gaming • Photographing</p>
           </div>
           <div class="opacity-70 group-hover:opacity-100 transition text-2xl">›</div>
         </div>
