update navbar and picture

--- a/rush/Te.html
+++ b/rush/Te.html
@@ -14,28 +14,27 @@
   <nav class="fixed top-5 left-1/2 -translate-x-1/2 bg-slate-900/50 backdrop-blur-md rounded-[50px] px-2 py-1 z-50 shadow-lg ring-1 ring-white/10">
     <ul class="flex items-center gap-1">
       <li>
-        <a href="landing-page.html" class="flex items-center gap-2 px-4 py-2 rounded-2xl text-white/85 hover:text-white motion-safe:transition motion-safe:hover:bg-white/10">
+        <a href="landing-page.html" class="flex items-center gap-2 px-4 py-2 rounded-2xl text-white/85 hover:text-white motion-safe:transition motion-safe:hover:bg-white/10 motion-safe:hover:scale-105 motion-safe:hover:shadow">
           <span class="text-2xl">🏠</span><span class="text-sm font-medium">Home</span>
         </a>
       </li>
-      <!-- Active item example -->
       <li>
-        <a href="#Profile" class="flex items-center gap-2 px-4 py-2 rounded-2xl bg-slate-800 text-blue-400 motion-safe:transition motion-safe:hover:scale-105 motion-safe:hover:shadow">
+        <a href="#Profile" class="flex items-center gap-2 px-4 py-2 rounded-2xl bg-slate-800 text-blue-400 motion-safe:transition motion-safe:hover:scale-105 motion-safe:hover:bg-white/10 motion-safe:hover:shadow">
           <span class="text-2xl">📘</span><span class="text-sm font-medium">Profile</span>
         </a>
       </li>
       <li>
-        <a href="#Skills" class="flex items-center gap-2 px-4 py-2 rounded-2xl text-white/85 hover:text-white motion-safe:transition motion-safe:hover:bg-white/10">
+        <a href="#Skills" class="flex items-center gap-2 px-4 py-2 rounded-2xl bg-slate-800 text-blue-400 motion-safe:transition motion-safe:hover:scale-105 motion-safe:hover:bg-white/10 motion-safe:hover:shadow">
           <span class="text-2xl">🚀</span><span class="text-sm font-medium">Skills</span>
         </a>
       </li>
       <li>
-        <a href="#Experience" class="flex items-center gap-2 px-4 py-2 rounded-2xl text-white/85 hover:text-white motion-safe:transition motion-safe:hover:bg-white/10">
+        <a href="#Experience" class="flex items-center gap-2 px-4 py-2 rounded-2xl bg-slate-800 text-blue-400 motion-safe:transition motion-safe:hover:scale-105 motion-safe:hover:bg-white/10 motion-safe:hover:shadow">
           <span class="text-2xl">🎓</span><span class="text-sm font-medium">Experience</span>
         </a>
       </li>
       <li>
-        <a href="#Contact" class="flex items-center gap-2 px-4 py-2 rounded-2xl text-white/85 hover:text-white motion-safe:transition motion-safe:hover:bg-white/10">
+        <a href="#Contact" class="flex items-center gap-2 px-4 py-2 rounded-2xl bg-slate-800 text-blue-400 motion-safe:transition motion-safe:hover:scale-105 motion-safe:hover:bg-white/10 motion-safe:hover:shadow">
           <span class="text-2xl">✉️</span><span class="text-sm font-medium">Contact</span>
         </a>
       </li>
@@ -55,10 +54,10 @@
   <!-- Profile / About -->
   <section id="Profile" class="min-h-screen flex flex-col justify-center items-center bg-white text-slate-900 px-6">
     <div class="max-w-3xl w-full text-center">
-      <img src="img/me.webp" alt="Te Profile" class="w-28 h-28 sm:w-32 sm:h-32 mx-auto rounded-full shadow mb-4 object-cover">
+      <img src="img/Te.JPG" alt="Te Profile" class="w-28 h-28 sm:w-32 sm:h-32 mx-auto rounded-full shadow mb-4 object-cover">
       <h2 class="text-3xl font-bold">About Me</h2>
       <p class="mt-2 text-slate-600">
-        I'm Te, a Computer Engineering student passionate about IoT, Cloud, and Software Development.
+        My name is Techin Charoensook ,I'm a Computer Engineering student passionate about IoT, Cloud, and Software Development.
         I enjoy building embedded systems (ESP32/Arduino), writing C/C++, and exploring Linux & networking.
       </p>
       <div class="mt-5 flex flex-wrap items-center justify-center gap-2">
@@ -129,7 +128,7 @@
     <div class="max-w-3xl mx-auto text-center">
       <h2 class="text-2xl sm:text-3xl font-bold">Contact</h2>
       <div class="mt-6 flex flex-wrap items-center justify-center gap-3">
-        <a class="inline-flex items-center gap-2 px-4 py-2 rounded-full border font-semibold hover:bg-white/10 motion-safe:transition" href="mailto:techin.cr@gmail.com">✉ techin.cr@gmail.com</a>
+        <a class="inline-flex items-center gap-2 px-4 py-2 rounded-full border font-semibold hover:bg-white/10 motion-safe:transition" href="mailto:68010403@kmitl.ac.th">✉ 68010403@kmitl.ac.th</a>
         <a class="inline-flex items-center gap-2 px-4 py-2 rounded-full border font-semibold hover:bg-white/10 motion-safe:transition" href="https://github.com/telnwza" target="_blank" rel="noreferrer">GitHub</a>
         <a class="inline-flex items-center gap-2 px-4 py-2 rounded-full border font-semibold hover:bg-white/10 motion-safe:transition" href="https://www.instagram.com/te._.lnwza/" target="_blank" rel="noreferrer">Instagram</a>
       </div>
