fix web abit and update README

--- a/rush/Te.html
+++ b/rush/Te.html
@@ -1,12 +1,11 @@
 <!doctype html>
-<html lang="th">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Portfolio — Te</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script src="script.js"></script>
   <meta name="color-scheme" content="light dark">
 </head>
 <body class="font-sans bg-slate-50 text-slate-900">
@@ -129,8 +128,8 @@
       <h2 class="text-2xl sm:text-3xl font-bold">Contact</h2>
       <div class="mt-6 flex flex-wrap items-center justify-center gap-3">
         <a class="inline-flex items-center gap-2 px-4 py-2 rounded-full border font-semibold hover:bg-white/10 motion-safe:transition" href="mailto:68010403@kmitl.ac.th">✉ 68010403@kmitl.ac.th</a>
-        <a class="inline-flex items-center gap-2 px-4 py-2 rounded-full border font-semibold hover:bg-white/10 motion-safe:transition" href="https://github.com/telnwza" target="_blank" rel="noreferrer">GitHub</a>
-        <a class="inline-flex items-center gap-2 px-4 py-2 rounded-full border font-semibold hover:bg-white/10 motion-safe:transition" href="https://www.instagram.com/te._.lnwza/" target="_blank" rel="noreferrer">Instagram</a>
+        <a class="inline-flex items-center gap-2 px-4 py-2 rounded-full border font-semibold hover:bg-white/10 motion-safe:transition" href="https://github.com/telnwza" target="_blank" rel="noopener noreferrer">GitHub</a>
+        <a class="inline-flex items-center gap-2 px-4 py-2 rounded-full border font-semibold hover:bg-white/10 motion-safe:transition" href="https://www.instagram.com/te._.lnwza/" target="_blank" rel="noopener noreferrer">Instagram</a>
       </div>
     </div>
   </section>
