--- a/rush/Finn.html
+++ b/rush/Finn.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="th">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -53,7 +53,7 @@
   <!-- Profile / About -->
   <section id="Profile" class="min-h-screen flex flex-col justify-center items-center bg-white text-slate-900 px-6">
     <div class="max-w-3xl w-full text-center">
-      <img src="img/Finn.jpg" alt="FInn Profile" class="w-28 h-28 sm:w-32 sm:h-32 mx-auto rounded-full shadow mb-4 object-cover">
+      <img src="img/Finn.jpg" alt="Portrait of Finn" class="w-28 h-28 sm:w-32 sm:h-32 mx-auto rounded-full shadow mb-4 object-cover">
       <h2 class="text-3xl font-bold">About Me</h2>
       <p class="mt-2 text-slate-600">
         Hello, my name is Finn I am a Computer Science student.
@@ -124,8 +124,8 @@
       <h2 class="text-2xl sm:text-3xl font-bold">Contact</h2>
       <div class="mt-6 flex flex-wrap items-center justify-center gap-3">
         <a class="inline-flex items-center gap-2 px-4 py-2 rounded-full border font-semibold hover:bg-white/10 motion-safe:transition" href="mailto:68050159@kmitl.ac.th">✉ 68050159@kmitl.ac.th</a>
-        <a class="inline-flex items-center gap-2 px-4 py-2 rounded-full border font-semibold hover:bg-white/10 motion-safe:transition" href="https://github.com/68050159-nattanicha" target="_blank" rel="noreferrer">GitHub</a>
-        <a class="inline-flex items-center gap-2 px-4 py-2 rounded-full border font-semibold hover:bg-white/10 motion-safe:transition" href="https://www.instagram.com/forlorruk?igsh=cDFkaTR0NTR0bnV1" target="_blank" rel="noreferrer">Instagram</a>
+        <a class="inline-flex items-center gap-2 px-4 py-2 rounded-full border font-semibold hover:bg-white/10 motion-safe:transition" href="https://github.com/68050159-nattanicha" target="_blank" rel="noopener noreferrer">GitHub</a>
+        <a class="inline-flex items-center gap-2 px-4 py-2 rounded-full border font-semibold hover:bg-white/10 motion-safe:transition" href="https://www.instagram.com/forlorruk?igsh=cDFkaTR0NTR0bnV1" target="_blank" rel="noopener noreferrer">Instagram</a>
       </div>
     </div>
   </section>
