--- a/rush/Te.html
+++ b/rush/Te.html
@@ -4,94 +4,99 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Portfolio — Te</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/profile.css">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <meta name="color-scheme" content="light dark">
 </head>
-<body class="font-sans bg-slate-50 text-slate-900">
-  <!-- Centered floating navbar -->
-  <nav class="fixed top-5 left-1/2 -translate-x-1/2 bg-slate-900/50 backdrop-blur-md rounded-[50px] px-2 py-1 z-50 shadow-lg ring-1 ring-white/10">
-    <ul class="flex items-center gap-1">
+<body class="profile-page">
+  <nav class="floating-nav">
+    <ul class="floating-nav__list">
       <li>
-        <a href="landing-page.html" class="flex items-center gap-2 px-4 py-2 rounded-2xl text-white/85 hover:text-white motion-safe:transition motion-safe:hover:bg-white/10 motion-safe:hover:scale-105 motion-safe:hover:shadow">
-          <span class="text-2xl">🏠</span><span class="text-sm font-medium">Home</span>
+        <a class="floating-nav__link" href="landing-page.html">
+          <span class="floating-nav__icon">🏠</span>
+          <span class="floating-nav__label">Home</span>
         </a>
       </li>
       <li>
-        <a href="#Profile" class="flex items-center gap-2 px-4 py-2 rounded-2xl bg-slate-800 text-blue-400 motion-safe:transition motion-safe:hover:scale-105 motion-safe:hover:bg-white/10 motion-safe:hover:shadow">
-          <span class="text-2xl">📘</span><span class="text-sm font-medium">Profile</span>
+        <a class="floating-nav__link is-active" href="#Profile" aria-current="page">
+          <span class="floating-nav__icon">📘</span>
+          <span class="floating-nav__label">Profile</span>
         </a>
       </li>
       <li>
-        <a href="#Skills" class="flex items-center gap-2 px-4 py-2 rounded-2xl bg-slate-800 text-blue-400 motion-safe:transition motion-safe:hover:scale-105 motion-safe:hover:bg-white/10 motion-safe:hover:shadow">
-          <span class="text-2xl">🚀</span><span class="text-sm font-medium">Skills</span>
+        <a class="floating-nav__link" href="#Skills">
+          <span class="floating-nav__icon">🚀</span>
+          <span class="floating-nav__label">Skills</span>
         </a>
       </li>
       <li>
-        <a href="#Experience" class="flex items-center gap-2 px-4 py-2 rounded-2xl bg-slate-800 text-blue-400 motion-safe:transition motion-safe:hover:scale-105 motion-safe:hover:bg-white/10 motion-safe:hover:shadow">
-          <span class="text-2xl">🎓</span><span class="text-sm font-medium">Experience</span>
+        <a class="floating-nav__link" href="#Experience">
+          <span class="floating-nav__icon">🎓</span>
+          <span class="floating-nav__label">Experience</span>
         </a>
       </li>
       <li>
-        <a href="#Contact" class="flex items-center gap-2 px-4 py-2 rounded-2xl bg-slate-800 text-blue-400 motion-safe:transition motion-safe:hover:scale-105 motion-safe:hover:bg-white/10 motion-safe:hover:shadow">
-          <span class="text-2xl">✉️</span><span class="text-sm font-medium">Contact</span>
+        <a class="floating-nav__link" href="#Contact">
+          <span class="floating-nav__icon">✉️</span>
+          <span class="floating-nav__label">Contact</span>
         </a>
       </li>
     </ul>
   </nav>
 
-  <!-- Hero / Landing -->
-  <section class="min-h-screen flex flex-col justify-center items-center text-center bg-gradient-to-br from-slate-900 via-gray-800 to-black text-white">
-    <h1 class="text-4xl sm:text-5xl font-extrabold">Te — Computer Engineering</h1>
-    <p class="mt-3 text-lg sm:text-xl opacity-90">Dev • IoT • Cloud</p>
-    <div class="mt-6 flex flex-wrap items-center justify-center gap-3">
-      <a href="#Skills" class="px-5 py-3 rounded-lg border border-white font-semibold hover:bg-indigo-800 motion-safe:transition hover:bg-white/15 hover:scale-105 hover:shadow-2xl focus:outline-none focus:ring-2">Skills</a>
-      <a href="#Contact" class="px-5 py-3 rounded-lg border border-white font-semibold hover:bg-indigo-800 motion-safe:transition hover:bg-white/15 hover:scale-105 hover:shadow-2xl focus:outline-none focus:ring-2">Contact</a>
+  <section class="hero">
+    <h1 class="hero__title">Te — Computer Engineering</h1>
+    <p class="hero__subtitle">Dev • IoT • Cloud</p>
+    <div class="hero__actions">
+      <a class="hero__button" href="#Skills">Skills</a>
+      <a class="hero__button" href="#Contact">Contact</a>
     </div>
   </section>
 
-  <!-- Profile / About -->
-  <section id="Profile" class="min-h-screen flex flex-col justify-center items-center bg-white text-slate-900 px-6">
-    <div class="max-w-3xl w-full text-center">
-      <img src="img/Te.JPG" alt="Te Profile" class="w-28 h-28 sm:w-32 sm:h-32 mx-auto rounded-full shadow mb-4 object-cover">
-      <h2 class="text-3xl font-bold">About Me</h2>
-      <p class="mt-2 text-slate-600">
-        My name is Techin Charoensook ,I'm a Computer Engineering student passionate about IoT, Cloud, and Software Development.
-        I enjoy building embedded systems (ESP32/Arduino), writing C/C++, and exploring Linux & networking.
-      </p>
-      <div class="mt-5 flex flex-wrap items-center justify-center gap-2">
-        <span class="px-3 py-1 rounded-full bg-slate-100 text-slate-800 text-sm">C/C++</span>
-        <span class="px-3 py-1 rounded-full bg-slate-100 text-slate-800 text-sm">HTML/CSS/JS</span>
-        <span class="px-3 py-1 rounded-full bg-slate-100 text-slate-800 text-sm">Arduino/ESP32</span>
-        <span class="px-3 py-1 rounded-full bg-slate-100 text-slate-800 text-sm">Linux</span>
-        <span class="px-3 py-1 rounded-full bg-slate-100 text-slate-800 text-sm">Networking & MQTT</span>
+  <section id="Profile" class="section section--light">
+    <div class="section__container">
+      <header class="section__header">
+        <img src="img/Te.JPG" alt="Te" class="avatar">
+        <h2>About Me</h2>
+        <p class="section__lead">
+          My name is Techin Charoensook. I'm a Computer Engineering student passionate about IoT, Cloud, and Software Development.
+          I enjoy building embedded systems (ESP32/Arduino), writing C/C++, and exploring Linux & networking.
+        </p>
+      </header>
+      <div class="chip-list">
+        <span class="chip">C/C++</span>
+        <span class="chip">HTML/CSS/JS</span>
+        <span class="chip">Arduino/ESP32</span>
+        <span class="chip">Linux</span>
+        <span class="chip">Networking &amp; MQTT</span>
       </div>
     </div>
   </section>
 
-  <!-- Skills -->
-  <section id="Skills" class="py-16 px-6">
-    <div class="max-w-5xl mx-auto">
-      <h2 class="text-2xl sm:text-3xl font-bold mb-6">Skills</h2>
-      <div class="grid gap-4 sm:grid-cols-2 lg:grid-cols-3">
-        <!-- Card -->
-        <article class="border rounded-xl p-5 bg-white shadow-sm">
-          <h3 class="font-semibold mb-2">Programming</h3>
-          <ul class="list-disc pl-5 text-slate-700 text-sm space-y-1">
-            <li>C, C++ (embedded & CLI tools)</li>
-            <li>HTML, CSS, JavaScript (Tailwind)</li>
+  <section id="Skills" class="section section--muted">
+    <div class="section__container">
+      <header class="section__header">
+        <h2>Skills</h2>
+      </header>
+      <div class="card-grid card-grid--three">
+        <article class="info-card">
+          <h3 class="info-card__title">Programming</h3>
+          <ul class="info-list">
+            <li>C, C++ (embedded &amp; CLI tools)</li>
+            <li>HTML, CSS, JavaScript</li>
           </ul>
         </article>
-        <article class="border rounded-xl p-5 bg-white shadow-sm">
-          <h3 class="font-semibold mb-2">Embedded & IoT</h3>
-          <ul class="list-disc pl-5 text-slate-700 text-sm space-y-1">
+        <article class="info-card">
+          <h3 class="info-card__title">Embedded &amp; IoT</h3>
+          <ul class="info-list">
             <li>ESP32/Arduino, PWM, sensors, FSM</li>
             <li>MQTT basics, Node-RED, InfluxDB</li>
           </ul>
         </article>
-        <article class="border rounded-xl p-5 bg-white shadow-sm">
-          <h3 class="font-semibold mb-2">Systems & Tools</h3>
-          <ul class="list-disc pl-5 text-slate-700 text-sm space-y-1">
+        <article class="info-card">
+          <h3 class="info-card__title">Systems &amp; Tools</h3>
+          <ul class="info-list">
             <li>Linux CLI, Git/GitHub</li>
             <li>Grafana/Prometheus (basics)</li>
           </ul>
@@ -100,41 +105,44 @@
     </div>
   </section>
 
-  <!-- Experience / Education -->
-  <section id="Experience" class="py-16 px-6">
-    <div class="max-w-5xl mx-auto">
-      <h2 class="text-2xl sm:text-3xl font-bold mb-6">Experience & Education</h2>
-      <div class="grid gap-5 lg:grid-cols-2">
-        <article class="border rounded-xl bg-white p-5 shadow-sm">
-          <h3 class="font-semibold mb-2">Education</h3>
-          <ul class="text-sm text-slate-700 space-y-1 list-disc pl-5">
+  <section id="Experience" class="section section--light">
+    <div class="section__container">
+      <header class="section__header">
+        <h2>Experience &amp; Education</h2>
+      </header>
+      <div class="card-grid">
+        <article class="info-card">
+          <h3 class="info-card__title">Education</h3>
+          <ul class="info-list">
             <li>Computer Engineering — KMITL (Student)</li>
             <li>Relevant: Calculus, Embedded Systems</li>
           </ul>
         </article>
-        <article class="border rounded-xl bg-white p-5 shadow-sm">
-          <h3 class="font-semibold mb-2">Activities / Awards</h3>
-          <ul class="text-sm text-slate-700 space-y-1 list-disc pl-5">
-            <li>Robotics/IoT projects & competitions</li>
+        <article class="info-card">
+          <h3 class="info-card__title">Activities / Awards</h3>
+          <ul class="info-list">
+            <li>Robotics &amp; IoT projects and competitions</li>
           </ul>
         </article>
       </div>
     </div>
   </section>
 
-  <!-- Contact -->
-  <section id="Contact" class="py-16 px-6 bg-slate-900 text-white">
-    <div class="max-w-3xl mx-auto text-center">
-      <h2 class="text-2xl sm:text-3xl font-bold">Contact</h2>
-      <div class="mt-6 flex flex-wrap items-center justify-center gap-3">
-        <a class="inline-flex items-center gap-2 px-4 py-2 rounded-full border font-semibold hover:bg-white/10 motion-safe:transition" href="mailto:68010403@kmitl.ac.th">✉ 68010403@kmitl.ac.th</a>
-        <a class="inline-flex items-center gap-2 px-4 py-2 rounded-full border font-semibold hover:bg-white/10 motion-safe:transition" href="https://github.com/telnwza" target="_blank" rel="noopener noreferrer">GitHub</a>
-        <a class="inline-flex items-center gap-2 px-4 py-2 rounded-full border font-semibold hover:bg-white/10 motion-safe:transition" href="https://www.instagram.com/te._.lnwza/" target="_blank" rel="noopener noreferrer">Instagram</a>
+  <section id="Contact" class="section section--dark">
+    <div class="section__container">
+      <header class="section__header">
+        <h2>Contact</h2>
+        <p class="section__lead">Happy to connect about embedded systems, software projects, or collaborations.</p>
+      </header>
+      <div class="contact-links">
+        <a class="contact-link" href="mailto:68010403@kmitl.ac.th">✉ 68010403@kmitl.ac.th</a>
+        <a class="contact-link" href="https://github.com/telnwza" target="_blank" rel="noopener noreferrer">GitHub</a>
+        <a class="contact-link" href="https://www.instagram.com/te._.lnwza/" target="_blank" rel="noopener noreferrer">Instagram</a>
       </div>
     </div>
   </section>
 
-  <footer class="py-6 text-center text-xs text-slate-500">© 2025 Te — Portfolio</footer>
+  <footer class="site-footer">© 2025 Te — Portfolio</footer>
   <script src="js/script.js"></script>
 </body>
 </html>
