--- a/rush/landing-page.html
+++ b/rush/landing-page.html
@@ -5,52 +5,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Rush Projects</title>
 
-  <!-- Font & Tailwind -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body { font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, sans-serif; }
-  </style>
+  <link rel="stylesheet" href="css/landing-page.css" />
 </head>
-<body class="min-h-screen relative bg-gradient-to-br from-slate-900 via-indigo-950 to-slate-900 text-white">
-  <!-- Background accents -->
-  <div class="pointer-events-none absolute inset-0 opacity-70">
-    <div class="absolute -top-24 -right-24 h-96 w-96 rounded-full blur-3xl bg-indigo-500/20"></div>
-    <div class="absolute -bottom-24 -left-24 h-96 w-96 rounded-full blur-3xl bg-sky-400/20"></div>
+<body>
+  <div class="background">
+    <span class="accent accent--top"></span>
+    <span class="accent accent--bottom"></span>
   </div>
 
-  <main class="relative z-10 max-w-xl mx-auto px-6 py-12 min-h-screen flex flex-col items-center justify-center">
-    <header class="mb-8 text-center">
-      <p class="text-xs tracking-widest font-bold uppercase text-white/70">Focus Selection</p>
-      <h1 class="mt-2 text-3xl sm:text-4xl font-extrabold">Choose Your Focus</h1>
+  <main class="content">
+    <header class="intro">
+      <p class="intro__tagline">Focus Selection</p>
+      <h1 class="intro__title">Choose Your Focus</h1>
     </header>
 
-    <div class="w-full space-y-5">
-      <!-- TE card -->
-      <a href="Te.html" class="group block w-full rounded-[50px] bg-white/10 backdrop-blur-xl ring-1 ring-white/20 shadow-xl px-6 py-5 sm:py-7 transition hover:bg-white/15 hover:scale-105 hover:shadow-2xl focus:outline-none focus:ring-2 focus:ring-sky-400/60">
-        <div class="flex items-center gap-4">
-          <div class="shrink-0 h-12 w-12 rounded-full grid place-items-center bg-white/15 ring-1 ring-white/10 text-2xl">👨‍💻</div>
-          <div class="flex-1">
-            <h2 class="text-lg sm:text-xl font-semibold">Te</h2>
-            <p class="text-sm text-white/70">Software & Embedded • C/C++ • Web Basics • ESP32</p>
+    <div class="cards">
+      <a href="Te.html" class="card">
+        <div class="card__body">
+          <div class="card__icon">👨‍💻</div>
+          <div class="card__text">
+            <h2 class="card__title">Te</h2>
+            <p class="card__subtitle">Software & Embedded • C/C++ • Web Basics • ESP32</p>
           </div>
-          <div class="opacity-70 group-hover:opacity-100 transition text-2xl">›</div>
+          <div class="card__arrow">›</div>
         </div>
       </a>
 
-      <!-- FIN card -->
-      <a href="Finn.html" class="group block w-full rounded-[50px] bg-white/10 backdrop-blur-xl ring-1 ring-white/20 shadow-xl px-6 py-5 sm:py-7 transition hover:bg-white/15 hover:scale-105 hover:shadow-2xl focus:outline-none focus:ring-2 focus:ring-indigo-400/60">
-        <div class="flex items-center gap-4">
-          <div class="shrink-0 h-12 w-12 rounded-full grid place-items-center bg-white/15 ring-1 ring-white/10 text-2xl">📸</div>
-          <div class="flex-1">
-            <h2 class="text-lg sm:text-xl font-semibold">Finn</h2>
-            <p class="text-sm text-white/70">Studying Programming • Gaming • Photographing</p>
+      <a href="Finn.html" class="card">
+        <div class="card__body">
+          <div class="card__icon">📸</div>
+          <div class="card__text">
+            <h2 class="card__title">Finn</h2>
+            <p class="card__subtitle">Studying Programming • Gaming • Photographing</p>
           </div>
-          <div class="opacity-70 group-hover:opacity-100 transition text-2xl">›</div>
+          <div class="card__arrow">›</div>
         </div>
       </a>
     </div>
-    <footer class="mt-8 text-center text-xs text-white/60">
+
+    <footer class="footer-note">
       Click to get into Portfolio
     </footer>
   </main>
